--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ body {
 .header-bar h1 {
     font-size: 40px;
     font-weight: 500;
+    position: absolute;
+    display: flex;
+    margin: auto;
 }
 
 .nav-section {
@@ -57,6 +60,7 @@ body {
     height: 88%;
     border-top: 1px solid #cc1818;
     border-left: 1px solid #cc1818;
+    transition: all 0.3s ease-out;
 }
 
 .search-label {
@@ -68,4 +72,66 @@ body {
     width: calc(100% - 60px);
     padding: 0 0 0 10px;
     margin-bottom: 20px;
+}
+
+.buttonNav {
+    background-color: #1a1a1a;
+    display: -ms-flexbox;
+    display: flex;
+    margin-right: auto;
+    margin-left: 60px;
+}
+
+.toggleButton {
+    float: right;
+    border: 3px solid #cc1818;
+    padding: 5px 6px;
+    background-color: #1a1a1a;
+    border-radius: 10%;
+    cursor: pointer;
+}
+
+.toggleButton span {
+    width: 25px;
+    display: block;
+    margin: 6px 12px;
+    height: 3px;
+    background: #cc1818;
+}
+
+.toggleButton:hover,
+.toggleButton:focus {
+    background: #343434;
+}
+
+@media (max-width: 800px) {
+    .nav-section {
+        visibility: hidden;
+        left: -20%;
+        transition: all 0.3s ease-out;
+    }
+    .nav-section.active {
+        visibility: visible;
+        left: 0%;
+        transition: all 0.3s ease-out;
+    }
+    .map-canvas.full {
+        left: 0%;
+        width: 100%;
+        transition: all 0.3s ease-out;
+    }
+}
+
+@media (max-width: 475px) {
+    .header-bar h1 {
+        font-size: 30px;
+        font-weight: 700;
+    }
+}
+
+@media (max-width: 359px) {
+    .header-bar h1 {
+        font-size: 24px;
+        font-weight: 700;
+    }
 }
