--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,8 @@ body {
     height: 12%;
     position: absolute;
     width: 100%;
-    background: #1a1a1a;
-    color: #cc1818;
+    background: #000;
+    color: #e77474;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -30,9 +30,9 @@ body {
     width: 20%;
     height: 88%;
     top: 12%;
-    background: #1a1a1a;
-    color: #cc1818;
-    border-top: 1px solid #cc1818;
+    background: #000;
+    color: #e77474;
+    border-top: 1px solid #e77474;
     line-height: 1.618;
     padding-top: 20px;
 }
@@ -47,8 +47,8 @@ body {
 .nav-section a:hover,
 .nav-section a:focus {
     color: #e6e600;
-    /* border-bottom: 1px solid #cc1818; */
-    text-shadow: 1px 1px 1px #cc1818;
+    /* border-bottom: 1px solid #e77474; */
+    text-shadow: 1px 1px 1px #e77474;
     cursor: pointer;
 }
 
@@ -59,8 +59,8 @@ body {
     width: 80%;
     top: 12%;
     height: 88%;
-    border-top: 1px solid #cc1818;
-    border-left: 1px solid #cc1818;
+    border-top: 1px solid #e77474;
+    border-left: 1px solid #e77474;
     transition: all 0.3s ease-out;
 }
 
@@ -77,7 +77,7 @@ body {
 
 .buttonNav {
     visibility: hidden;
-    background-color: #1a1a1a;
+    background-color: #000;
     display: -ms-flexbox;
     display: flex;
     margin-right: auto;
@@ -86,9 +86,9 @@ body {
 
 .toggleButton {
     float: right;
-    border: 3px solid #cc1818;
+    border: 3px solid #e77474;
     padding: 5px 6px;
-    background-color: #1a1a1a;
+    background-color: #000;
     border-radius: 10%;
     cursor: pointer;
 }
@@ -98,7 +98,7 @@ body {
     display: block;
     margin: 6px 12px;
     height: 3px;
-    background: #cc1818;
+    background: #e77474;
 }
 
 .toggleButton:hover,
@@ -110,7 +110,6 @@ body {
     .nav-section {
         width: 30%;
     }
-
     .map-canvas {
         left: 30%;
         width: 70%;
@@ -142,25 +141,20 @@ body {
     .nav-section {
         width: 30%;
     }
-
     .map-canvas {
         left: 30%;
         width: 70%;
     }
-
     .header-bar h1 {
         font-size: 30px;
         font-weight: 700;
     }
-
     .buttonNav {
         margin-left: 40px
     }
-
     .nav-section {
         width: 40%;
     }
-
     .map-canvas {
         left: 40%;
         width: 60%;
@@ -172,29 +166,24 @@ body {
         font-size: 22px;
         font-weight: 700;
     }
-
     .toggleButton span {
         width: 18px;
         display: block;
         margin: 5px 8px;
         height: 3px;
-        background: #cc1818;
+        background: #e77474;
     }
-
     .toggleButton {
-        border: 3px solid #cc1818;
+        border: 3px solid #e77474;
         padding: 2px;
     }
-
     .buttonNav {
         margin-left: 20px;
     }
-
     .map-canvas {
         left: 60%;
         width: 40%;
     }
-
     .nav-section {
         width: 60%;
     }
@@ -209,11 +198,9 @@ body {
         left: 70%;
         width: 30%;
     }
-
     .nav-section {
         width: 70%;
     }
-
     .nav-section a {
         margin: 0;
     }
